get all boards change

--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -35,7 +35,7 @@
  	<h2><strong><center>Created Boards</center></strong></h2>
  	
  	<p th:each="entry: ${allBoards}">
-  <span th:text="'Key: ' + ${entry.id} + ', Value: ' + ${entry.boardName}"></span>
+  <span th:text="'Key: ' + ${entry.boardId} + ', Value: ' + ${entry.boardName}"></span>
 	</p>
 
  </div>
