--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -26,23 +26,38 @@
  </nav>
  </div><!-- end of navbar wrapper -->
  
- <div class="row ">
+ <div class="row">
  
  
- <div class="col-md-8 col-md-offset-1" style="background-color:#f5f5f5;">
+ <div class="col-md-7 col-md-offset-2" style="background-color:#f5f5f5;">
  	<div class= "container">
  	
- 	<h2><strong><center>Your Created Boards</center></strong></h2><hr/><br/>
- 	
+ 	<h2><strong>Your Created Boards</strong><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:48%;">&emsp;</span>
+ 		<form action="/deleteBoard" method="post">
+ 		<input type="hidden" value="" id="boardId" name="boardId"/>
+	 	<a href="#" onclick="$(this).closest('form').submit(); return false;"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+	 	</form></h2>
+ 	<hr width="80%;" style="margin-right:30%;"/><br/>
+ 	<div class="row">
  	<p th:each="entry: ${allBoards}">
- 	
-	 	
-	 	<img src="/images/board_thumb.jpg" width="8%;"/>
-	 	<span th:text="'Key: ' + ${entry.boardId} + ', Value: ' + ${entry.boardName}"></span>
-	
+ 	<div class="col-md-2" style="padding-bottom:3%;margin-right:5%;">
+ 	 	<img src="/images/board_thumb.jpg" width="55%;"/><br/><br/>
+ 	 	<form action="" method="post">
+	 	<button type="submit" id="createdBoardsID" class="btn btn-default btn-xs" th:value="${entry.boardId}">&nbsp;<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>View</button>
+	 	</form>
+	 	<span th:text="${entry.boardName}"/></div>
 	</p>
-
- </div>
+	</div>
+	<div class="row">
+	<h2><strong>Boards shared with you</strong><span class="glyphicon glyphicon-pencil" aria-hidden="true" style="margin-left:45%;">&emsp;</span><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></h2><hr width="80%;" style="margin-right:30%;"/><br/>
+	<p th:each="entry: ${sharedBoards}">
+ 	<div class="col-md-2" style="padding-bottom:3%;margin-right:5%;">
+	 	<img src="/images/black.jpg" width="55%;"/><br/><br/>
+	 	<button type="submit" class="btn btn-default btn-xs">&nbsp;<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>View</button>
+	 	<span th:text="${entry.boardName}"/></div>
+	</p>
+	</div><br/>
+ </div><!-- end of container -->
  </div>
  
   <div class="col-md-2" style="margin-left:1%;"><button type="button" class="btn btn-warning" style="width:70%;" data-toggle="modal" data-target="#myModal"> + Create Board</button></div>
@@ -111,8 +126,8 @@
   </div><!-- /.modal -->
  
  
- <p th:text="'userid ' + ${user.id}"/>
- <p th:text="'userid ' + ${allBoards}"/>
+<!--  <p th:text="'userid ' + ${user.id}"/>
+ <p th:text="'userid ' + ${allBoards}"/> -->
  
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src ="/js/bootstrap.min.js"></script>
