--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -372,6 +372,8 @@
     $(document).ready(
             function() {
                 $("input").click(function(event) {
+                    // TODO Implement populate values in Edit field
+
                     alert($(this).attr("value"));
                 });
             }
