--- a/src/main/resources/templates/SnippetUsersHome.html
+++ b/src/main/resources/templates/SnippetUsersHome.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--suppress ALL -->
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -11,99 +10,80 @@
 <body>
 <div class="navbar-wrapper">
     <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
-           
         <div class="container-fluid">
 
-               
             <div class="navbar-header">
-                      <a class="navbar-brand" href="#" style="color:white;font-family: 'Poller One', cursive;"><strong>SnippetShare</strong></a>
-                   
+                <a class="navbar-brand" href="#" style="color:white;font-family: 'Poller One', cursive;"><strong>SnippetShare</strong></a>
             </div>
-                
-                 
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                     
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#" data-toggle="modal" data-target="#signupModal"
                            style="color:white"><strong>Home</strong></a></li>
-                         
                     <li><a href="#" th:href="@{/about}" style="color:white"><strong>About Us</strong></a></li>
-                         
+                    <li><a href="#" th:href="@{/logout}" style="color:white"><strong>LogOut</strong></a></li>
                 </ul>
-                   
             </div>
-              
         </div>
         <!-- container-fluid -->
-         
     </nav>
-     
 </div>
 <!-- end of navbar wrapper -->
- 
- 
+
 <div class="row">
-     
-     
-     
-    <div class="col-md-7 col-md-offset-2" style="background-color:#f5f5f5;">
-         
+
+    <div class="col-md-2">
+        <div class="sidebar-module sidebar-module-inset"
+             style="margin-left: 11%; margin-right: 11%; background-color: #fff;">
+            <p><strong>To search for Snippets, Boards and/or other Users</strong></p>
+            <h4>
+                <i class="glyphicon glyphicon-share-alt"></i> &nbsp;
+                <a th:href="@{/searchPage}">Click Here</a>
+            </h4>
+        </div>
+    </div>
+    <div class="col-md-7" style="background-color:#f5f5f5;">
         <div class="container">
-             
-             
-            <h2><strong>Your Created Boards</strong>
-                 
-                 
+            <h2><strong>Your Created Boards</strong> &nbsp;&nbsp; <a class="btn btn-primary"
+                                                                     th:href="@{'/SnippetUsersHome/allboards/'+${user.id}}">View
+                All Boards</a>
+
                 <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#EditBoardModal"
-                        style="margin-left:50%;">
-                      <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Edit
+                        style="margin-left:36%;">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Edit
                 </button>
-                 
-                 
+
                 <form action="/SnippetUsersHome/deleteBoard" id="deleteForm" role="form" method="post">
-                      <input type="hidden" th:value="${user.id}" name="boardOwner" id="boardOwner"/>
-                      <input type="hidden" value="" id="boardId" name="boardId"/>
-                     
+                    <input type="hidden" th:value="${user.id}" name="boardOwner" id="boardOwner"/>
+                    <input type="hidden" value="" id="boardId" name="boardId"/>
                     <button type="submit" class="btn btn-default btn-xs" onclick="submitDeleteForm();"
                             style="margin-left:77%;">
-                          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>&nbsp;Delete
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>&nbsp;Delete
                     </button>
                 </form>
             </h2>
             <p class="text-muted"><strong>Please select radio button and click on Edit or Delete button</strong></p>
-             
             <hr width="80%;" style="margin-right:30%;"/>
             <br/>
-             
-             
+
             <div class="row">
                 <p th:each="entry: ${allBoards}">
-                     
 
-                <div class="col-md-2" style="padding-bottom:3%;margin-right:5%;" th:id="myBoardsId">
-                      <strong><span th:text="${entry.boardName}"/></strong><br/><br/>
-                      <img src="/images/board_thumb.jpg" width="55%;"/><br/><br/>
-                    <input type="hidden" name="bid" id="bid" th:value="${entry.boardId}"/>
-                    <input type="hidden" name="objectboard" id="objectboard" th:value="${entry}"/>
-                    <input type="hidden" name="bname" id="bname" th:value="${entry.boardName}"/>
-                    <input type="hidden" name="bprivacy" id="bprivacy" th:value="${entry.privacy}"/>
-                    <input type="hidden" name="bcategory" id="bcategory" th:value="${category}"/>
-                    <span><input type="button" name="optradio" id="" th:value="${entry.boardId}"/></span>&nbsp;
-                    <input type="hidden" name="brdName" th:value="${entry.boardName}" id="brdName"/>
+                <div class="col-md-2" style="padding-bottom:3%;margin-right:5%;" id="myBoardsId">
+                    <strong><span th:text="${entry.boardName}"/></strong><br/><br/>
+                    <img src="/images/board_thumb.jpg" width="55%;"/><br/><br/>
+                    <span><input type="radio" name="optradio"
+                                 th:value="${entry.boardId}+'::'+${entry.boardName}+'::'+${entry.category}+'::'+${entry.privacy}"
+                                 onclick="getValues(this);"/></span>&nbsp;
+                    <!-- <input type="hidden" name="brdName" th:value="${entry.boardName}" id="brdName"/>
                     <input type="hidden" name="brdcategory" th:value="${entry.category}" id="brdcategory"/>
-                    <input type="hidden" name="brdprivacy" th:value="${entry.privacy}" id="brdprivacy"/>
-
-                    <a th:href="@{/getAllSnippets/user/{userid}/board/{boardid}(userid=${user.id},boardid=${entry.boardId})}"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>View</a>
-
-                    <!--<form action="/getAllSnippets" method="post">-->
-                        <!--<input type="hidden" class="form-control" name="boardOwner" id="boardOwner"-->
-                               <!--th:value="${user.id}"/>-->
-                        <!--<input type="hidden" class="form-control" name="boardId" id="boardId"-->
-                               <!--th:value="${entry.boardId}"/>-->
-                        <!--<button type="submit" id="createdBoardsID" class="btn btn-default btn-xs">&nbsp;-->
-                            <!--<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>View-->
-                        <!--</button>-->
-                    <!--</form>-->
+                    <input type="hidden" name="brdprivacy" th:value="${entry.privacy}" id="brdprivacy"/> -->
+                    <!-- <form action = "/getAllSnippets" method="post">
+                    <input type="hidden" class="form-control" name="boardOwner" id="boardOwner" th:value="${user.id}"/>
+                    <input type="hidden" class="form-control" name="boardId" id="boardId" th:value="${entry.boardId}"/>
+                    <button type="submit" id="createdBoardsID" class="btn btn-default btn-xs">&nbsp; -->
+                    <a th:href="@{'/getAllSnippets/'+${user.id}+'/'+${entry.boardId}}"><span
+                            class="glyphicon glyphicon-zoom-in" aria-hidden="true">View</span></a><!-- View</button></form> -->
                 </div>
                 </p>
             </div>
@@ -116,52 +96,40 @@
                 <br/>
 
                 <p th:each="entry: ${sharedBoards}">
-                     
 
                 <div class="col-md-2" style="padding-bottom:3%;margin-right:5%;">
+                    <strong><span th:text="${entry.boardName}"/></strong><br/><br/>
                     <img src="/images/black.jpg" width="55%;"/><br/><br/>
-                    <button type="submit" class="btn btn-default btn-xs">&nbsp;<span class="glyphicon glyphicon-zoom-in"
-                                                                                     aria-hidden="true"></span>View
-                    </button>
-                    <span th:text="${entry.boardName}"/></div>
+                    <a th:href="@{'/getAllSnippets/'+${user.id}+'/'+${entry.boardId}}"><span
+                            class="glyphicon glyphicon-zoom-in" aria-hidden="true">View</span></a><!-- View</button></form> -->
+                </div>
                 </p>
             </div>
             <br/>
-             
         </div>
         <!-- end of container -->
-         
     </div>
-     
-     
+
     <div class="col-md-3" style="padding-left:3%;margin-top:1%;">
         <button type="button" class="btn btn-warning" style="width:70%;" data-toggle="modal" data-target="#myModal"> +
             Create Board
         </button>
     </div>
-     
-     
+
 </div>
-<!-- end of  row -->
- 
- 
+<!-- end of  row -->
+
 <div id="myModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-       
     <div class="modal-dialog">
-             
         <div class="modal-content">
 
-                   
             <div class="modal-header">
-                         
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title" id="myModalLabel"><strong>Create Board</strong></h4>
-                       
+                <h4 class="modal-title" id="myModalLabel"><strong>Create Board</strong></h4>
             </div>
-                   
             <div class="modal-body">
-                          
+
                 <form method="POST" role="form" action="/SnippetUsersHome/createBoard">
                     <div class="row">
                         <div class="col-xs-7 col-md-offset-2">
@@ -177,19 +145,13 @@
                         <div class="col-xs-7 col-md-offset-2">
                             <label for="category">Category</label>
                             <select class="form-control" name="category" id="category">
-                                       
                                 <option>Select One</option>
-                                     
                                 <option>Java</option>
-                                     
                                 <option>Scala</option>
-                                     
                                 <option>C / C++</option>
-                                     
                                 <option>HTML / JavaScript</option>
-                                     
                                 <option>PHP / Perl / Python</option>
-                                      </select>
+                            </select>
 
                         </div>
                     </div>
@@ -199,13 +161,10 @@
                         <div class="col-xs-7 col-md-offset-2">
                             <label for="privacy">Privacy</label>
                             <select class="form-control" name="privacy" id="privacy">
-                                       
                                 <option>Select Private or Public</option>
-                                     
                                 <option>Private</option>
-                                     
                                 <option>Public</option>
-                                      </select>
+                            </select>
                         </div>
                     </div>
                     <br/>
@@ -219,7 +178,6 @@
                     <br/>
 
                     <div class="col-xs-7 col-md-offset-2">
-                         
                         <button id="submit" type="submit" class="btn btn-block btn-primary"
                                 style="background-color:#ff5a5f;border-color:#ff5a5f;font-weight:bold;">Create Board
                         </button>
@@ -227,48 +185,38 @@
                     <br/>
                 </form>
                 <br/>
-                       
             </div>
 
-                 
         </div>
         <!-- /.modal-content -->
-           
     </div>
     <!-- /.modal-dialog -->
-     
 </div>
 <!-- /.modal -->
- 
- 
- <!-- update board modal -->
- 
+
+
+<!-- update board modal -->
 <div id="EditBoardModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
      aria-hidden="true">
-       
     <div class="modal-dialog">
-             
         <div class="modal-content">
 
-                   
             <div class="modal-header">
-                         
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                          <h4 class="modal-title" id="myModalLabel"><strong>Update Board</strong></h4>
-                       
+                <h4 class="modal-title" id="myModalLabel"><strong>Update Board</strong></h4>
             </div>
-                   
             <div class="modal-body">
-                          
+
                 <form id="editForm" action="/SnippetUsersHome/updateBoard" method="POST" role="form">
                     <div class="row">
                         <div class="col-xs-7 col-md-offset-2">
                             <label for="boardName">Board Name</label>
-                            <input type="text" class="form-control" id="boardName" name="boardName" value-=""/>
+                            <input type="text" class="form-control" id="boardName" name="boardName" value=""/>
                         </div>
                     </div>
                     <br/>
+                    <input type="hidden" class="form-control" name="boardId" id="boardId" value=""/>
 
                     <input type="hidden" class="form-control" name="boardOwner" id="boardOwner" th:value="${user.id}"/>
 
@@ -276,19 +224,13 @@
                         <div class="col-xs-7 col-md-offset-2">
                             <label for="category">Category</label>
                             <select class="form-control" name="category" id="category" value="">
-                                       
                                 <option>Select One</option>
-                                     
                                 <option>Java</option>
-                                     
                                 <option>Scala</option>
-                                     
                                 <option>C / C++</option>
-                                     
                                 <option>HTML / JavaScript</option>
-                                     
                                 <option>PHP / Perl / Python</option>
-                                      </select>
+                            </select>
 
                         </div>
                     </div>
@@ -298,19 +240,15 @@
                         <div class="col-xs-7 col-md-offset-2">
                             <label for="privacy">Privacy</label>
                             <select class="form-control" name="privacy" id="privacy" value="">
-                                       
                                 <option>Select Private or Public</option>
-                                     
                                 <option>Private</option>
-                                     
                                 <option>Public</option>
-                                      </select>
+                            </select>
                         </div>
                     </div>
                     <br/>
 
                     <div class="col-xs-7 col-md-offset-2">
-                         
                         <button id="submit" type="submit" class="btn btn-block btn-primary"
                                 style="background-color:#ff5a5f;border-color:#ff5a5f;font-weight:bold;">Update Board
                         </button>
@@ -318,48 +256,45 @@
                     <br/>
                 </form>
                 <br/>
-                       
             </div>
 
-                 
         </div>
         <!-- /.modal-content -->
-           
     </div>
     <!-- /.modal-dialog -->
-     
 </div>
 <!-- /.modal -->
- 
- <p th:text="'size ' + ${size}"/>
-<input type="hidden" name="listSize" id="listSize" th:value="${size}"/>
- <!-- <p th:text="'userid ' + ${allBoards}"/> -->
- 
+
+<!--  <p th:text="'userid ' + ${user.id}"/>
+ <p th:text="'userid ' + ${allBoards}"/> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
- 
 <script>
 
     var brdName;
     var category;
     var privacy;
+    var boardId;
 
     $('#EditBoardModal').on('show.bs.modal', function () {
-        $(this).find('input[name="boardName"]').val(brdName);
+        $(this).find('input[name="boardId"]').val(boardId);
         $(this).find('select[name="category"]').val(category);
         $(this).find('select[name="privacy"]').val(privacy);
+        $(this).find('input[name="boardName"]').val(brdName);
     });
-//
-//    function getValues() {
-//
-//
-//        category = document.getElementById("bcategory").value;
-//        '' +
-//        alert(category);
-//        privacy = document.getElementById("brdprivacy").value;
-//        alert(brdName + category + privacy);
-//
-//    }
+
+    function getValues(test) {
+        alert(test);
+        alert(test.value);
+        var split = test.value.split("::");
+
+        boardId = split[0];
+        brdName = split[1];
+        category = split[2];
+        privacy = split[3];
+        alert(boardId + brdName + category + privacy);
+
+    }
 
     $('#EditBoardModal').on('hidden.bs.modal', function () {
         // do something…
@@ -369,18 +304,8 @@
         document.getElementById("deleteForm").submit();
     }
 
-    $(document).ready(
-            function() {
-                $("input").click(function(event) {
-                    // TODO Implement populate values in Edit field
-
-                    alert($(this).attr("value"));
-                });
-            }
-    );
-
 </script>
- 
+
 
 </body>
 </html>
